[tool.poetry]
name = "timingdiagram-alkasm"
packages = [
    { include = "timingdiagram" },
]
version = "0.4.2"
description = "Temporal boolean algebra"
authors = ["Alexander Reynolds <ar@reynoldsalexander.com>"]
homepage = "https://github.com/alkasm/timingdiagram"
repository = "https://github.com/alkasm/timingdiagram"
keywords = ["timingdiagram", "timing diagram", "data structures", "boolean algebra"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.6"
sortedcollections = "^1.1.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
